intellij-ide-starter tests plus security updates